// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the UIText component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": null,
      "fontWeight": null,
      "lineHeight": 21,
    }
  }
>
  "You are the only Bible some unbelievers will ever read." – John MacArthur
</Text>
`;

exports[`the UIText component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": null,
      "fontWeight": null,
      "lineHeight": 21,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the UIText component should render a loading state 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": null,
      "fontWeight": null,
      "lineHeight": 21,
    }
  }
>
  Default UIText text
</Text>
`;

exports[`the UIText component should render as bold 1`] = `
<Text
  bold={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": null,
      "fontWeight": "700",
      "lineHeight": 21,
    }
  }
>
  Bold UIText text
</Text>
`;

exports[`the UIText component should render as bold italic 1`] = `
<Text
  bold={true}
  italic={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": "italic",
      "fontWeight": "700",
      "lineHeight": 21,
    }
  }
>
  Bold italic UIText text
</Text>
`;

exports[`the UIText component should render as italic 1`] = `
<Text
  italic={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": "italic",
      "fontWeight": null,
      "lineHeight": 21,
    }
  }
>
  Italic UIText text
</Text>
`;

exports[`the UIText component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "System",
      "fontSize": 14,
      "fontStyle": null,
      "fontWeight": null,
      "lineHeight": 21,
    }
  }
>
  Default UIText text
</Text>
`;
